GearsetPOC/force-app/main/default/objects/Corp_Tracking__c/Corp_Tracking__c.object-meta.xml
<CustomObject>
    <label>Corp Tracking</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Corp Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corp Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>