GearsetPOC/force-app/main/default/objects/Corp_Tracking__c/fields/account_manager__c.field-meta.xml
<CustomField>
    <fullName>account_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Corp_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>