GearsetPOC/force-app/main/default/objects/Corp_Tracking__c/fields/client_name__c.field-meta.xml
<CustomField>
    <fullName>client_name__c</fullName>
    <label>Client Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>