GearsetPOC/force-app/main/default/objects/Corp_Tracking__c/fields/industry__c.field-meta.xml
<CustomField>
    <fullName>industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>PHARMACEUTICAL</fullName>
            </value>
            <value>
                <fullName>INFORMATION TECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>COMMUNICATION/MEDIA</fullName>
            </value>
            <value>
                <fullName>AUDIT/CONSULTING</fullName>
            </value>
            <value>
                <fullName>BANKING/FINANCE/INSURANCE</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION</fullName>
            </value>
            <value>
                <fullName>LEGAL</fullName>
            </value>
            <value>
                <fullName>ENERGY</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>AEROSPACE/DEFENCE</fullName>
            </value>
            <value>
                <fullName>LUXURY</fullName>
            </value>
            <value>
                <fullName>TRANSPORT/LOGISTICS</fullName>
            </value>
            <value>
                <fullName>E-COMMERCE</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>REAL ESTATES</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILE</fullName>
            </value>
            <value>
                <fullName>PROFESSIONAL SERVICES</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING</fullName>
            </value>
            <value>
                <fullName>CAPGEMINI</fullName>
                <isActive>false</isActive>
                <label>CAPGEMINI</label>
            </value>
            <value>
                <fullName>CONSULTING</fullName>
                <isActive>false</isActive>
                <label>CONSULTING</label>
            </value>
            <value>
                <fullName>TECHNOLOGY</fullName>
                <isActive>false</isActive>
                <label>TECHNOLOGY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>