GearsetPOC/force-app/main/default/objects/Corp_Tracking__c/fields/managed_status__c.field-meta.xml
<CustomField>
    <fullName>managed_status__c</fullName>
    <label>Managed Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UNMANAGED</fullName>
            </value>
            <value>
                <fullName>CONTRACTED</fullName>
            </value>
            <value>
                <fullName>SOFTLY MANAGED</fullName>
            </value>
            <value>
                <fullName>BUSINESS DEVELOPMENT</fullName>
            </value>
            <value>
                <fullName>NL ACCOUNTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>