GearsetPOC/force-app/main/default/objects/Corp_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>client_name__c</columns>
    <columns>managed_status__c</columns>
    <columns>industry__c</columns>
    <columns>account_manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>